# bevy-blocks

./: Cargo.toml
.github/workflows/: ci.yml
assets/shaders/: voxels.wgsl
src/: assets.rs  diagnostics.rs  main.rs  pan_orbit_camera.rs  voxel_material.rs
