[package]
edition = "2021"
name = "bevy-blocks"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove "dynamic" for release builds
bevy = {version = "0.7.0", features = ["wayland", "dynamic"]}
block-mesh = {git = "https://github.com/bonsairobo/block-mesh-rs", branch = "main"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
